# geosphere

./: .gitignore  README.rst  geosphere.py  geosphere.tex  setup.cfg  setup.py
doc/: geosphere.tex
geosphere/: __init__.py  geosphere.py
