[metadata]
name = geosphere
description = Spherical geometry utilities for navigation
long_description = file: README.rst
version = attr: geosphere.__version__
author = Marc Culler
license = GPLv2+
keywords = spherical, navigation
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: OS Independent
    Programming Language :: Python

[options]
python_requires >= 3
zip_safe = False
packages = geosphere


